--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -600,7 +600,7 @@ progress {
   margin-top: -1rem;
   margin-bottom: 1rem;
   font-size: 0.875em;
-  color: #6c757d;
+  color: #255986;
 }
 
 .blockquote-footer::before {
